--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 17th, 2024</h1>
-            <h3>Week 25 Day 2 (Navigation Layouts Day 3)</h3>
+            <h1>GDWD 105 - Agenda for September 18th, 2024</h1>
+            <h3>Week 25 Day 3 (Navigation Layouts Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you could have any creature (either real or fantastical)
-                            as a pet, what would you choose?
+                            Would you rather have the power of flight
+                            or the power to levitate objects?
                         </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/alt-animal-names.webp"
-                            alt="true names"
+                            src="images/broom-cats.jpg"
+                            alt="broom cats"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Media Queries</li>
-                        <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                        <li><span class="type">Exercise</span>Hover Galleries</li>
                     </ul>
                 </div>
 
@@ -39,7 +38,9 @@
                         <ul>
                             <li>
                                 <span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#media-queries-v3" target="_blank">Media Queries and Responsiveness</a> (cont.)
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-prep" target="_blank">
+                                    Hiding and Showing Content
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -47,15 +48,22 @@
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Media Queries</li>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin</li>
+                            <li>
+                                <span class="type">Demo</span>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-prep" target="_blank">
+                                    Hiding and Showing Content
+                                </a>
+                                (cont.)
+                            </li>
+                            <li><span class="type">Exercise</span>Hover Galleries</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Modernizing George RR Martin (cont.)</li>
+                            <li><span class="type">Exercise</span>Hover Galleries</li>
+                            <li><span class="type">Project</span>Dropdown Menu Site [begin]</li>
                         </ul>
                     </div>
                 </div>
