--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 19th, 2024</h1>
-            <h3>Week 25 Day 4 (Navigation Layouts Day 5)</h3>
+            <h1>GDWD 105 - Agenda for September 20th, 2024</h1>
+            <h3>Week 25 Day 5 (Navigation Layouts LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have: a bag that could hold anything, or
-                            your own pocket-dimension accessed via suitcase?
+                            Would you rather have poor long-term or short-term memory?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space blue-gray">
                         <img 
-                            src="images/hoarder-fox.webp"
-                            alt="hoarder fox"
+                            src="images/lab-fox.webp"
+                            alt="lab fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Dropdown Menu Site</li>
+                        <li><span class="type">N/A</span></li>
+                    </ul>
                 </div>
 
                 <div id="agenda">
@@ -35,32 +35,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
-                            <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav" target="_blank">
-                                    Dropdown Menus
-                                </a>
-                            </li>
+                            <li><span class="type">Lab Time</span>Past Exercises or Project</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#dropdown-nav" target="_blank">
-                                    Dropdown Menus
-                                </a>
-                                (cont.)
-                            </li>
-                            <li><span class="type">Project</span>Dropdown Menu Site (cont.)</li>
+                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
+
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Dropdown Menu Site (cont.)</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
