--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 25th, 2024</h1>
-            <h3>Week 26 Day 3 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for September 27th, 2024</h1>
+            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Do you have a favorite sport (either to watch or to play)? 
-                            If so, what is it?
+                            If you had to live without one of the five senses,
+                            which would you pick?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space reddish-black">
                         <img 
-                            src="images/fantasy-football.webp"
-                            alt="fantasy football"
+                            src="images/three-monkeys.jpeg"
+                            alt="three monkeys"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EVAL</span></li>
-                        <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                        <li><span class="type">FINAL EXAM</span></li>
+                        <li><span class="type">Exercise</span>JavaScript Function Game (?)</li>
+                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
                     </ul>
                 </div>
 
@@ -37,7 +38,7 @@
 
                         <h3>Period 1 (6:10pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">FINAL EVAL</span></li>
+                            <li><span class="type">FINAL EXAM</span></li>
                         </ul>
                     </div>
                     <!-- <h3 class="centered">Small Break (10min)</h3> -->
@@ -51,7 +52,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                            <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
                         </ul>
                     </div>
                 </div>
