--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 27th, 2024</h1>
-            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for September 30th, 2024</h1>
+            <h3>Week 27 Day 1 (Career Development)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you had to live without one of the five senses,
-                            which would you pick?
+                            What is a skill that you wish you could be better at?
                         </li>
                     </ul>
-                    <div class="img-container more-space reddish-black">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/three-monkeys.jpeg"
-                            alt="three monkeys"
+                            src="images/lab-experiment.webp"
+                            alt="lab dunno"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EXAM</span></li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game (?)</li>
-                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
+                        <li><span class="type">FINAL PROJECT</span>Resubmissions</li>
+                        <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                        <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
                     </ul>
                 </div>
 
@@ -36,23 +35,24 @@
                     <div class="wrapper">
                         <h3>Announcements (6pm-6:10pm)</h3>
 
-                        <h3>Period 1 (6:10pm-8:30pm)</h3>
+                        <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">FINAL EXAM</span></li>
+                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
                         </ul>
                     </div>
-                    <!-- <h3 class="centered">Small Break (10min)</h3> -->
-                    <!-- <div class="wrapper">
+                    <h3 class="centered">Small Break (10min)</h3>
+                    <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                            <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
                         </ul>
-                    </div> -->
+                    </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
+                            <li><span class="type">PowerPoint</span>Cover Letter</li>
+                            <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
                         </ul>
                     </div>
                 </div>
