--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 30th, 2024</h1>
-            <h3>Week 27 Day 1 (Career Development)</h3>
+            <h1>GDWD 105 - Agenda for October 1st, 2024</h1>
+            <h3>Week 27 Day 2 (Career Development)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is a skill that you wish you could be better at?
+                            What is a character trait that you admire in other people?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/lab-experiment.webp"
-                            alt="lab dunno"
+                            src="images/impressive.webp"
+                            alt="vader impressive"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL PROJECT</span>Resubmissions</li>
-                        <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
-                        <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
+                        <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
+                        <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
                     </ul>
                 </div>
 
@@ -37,22 +38,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Cover Letter</li>
-                            <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
+                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
                         </ul>
                     </div>
                 </div>
