--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 1st, 2024</h1>
-            <h3>Week 27 Day 2 (Career Development)</h3>
+            <h1>GDWD 105 - Agenda for October 2nd, 2024</h1>
+            <h3>Week 27 Day 3 (Career Development)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is a character trait that you admire in other people?
+                            What is a character trait or behavior 
+                            that you really dislike in other people?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space black">
                         <img 
-                            src="images/impressive.webp"
-                            alt="vader impressive"
+                            src="images/emperor.webp"
+                            alt="emperor hate"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
-                        <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                        <li><span class="type">Exercise</span>Brand Inspiration Board</li>
+                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
                     </ul>
                 </div>
 
@@ -38,24 +37,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Personal Branding</li>
-                            <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
+                            <li><span class="type">Exercise</span>Brand Inspiration Board</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul> 
-                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
-                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                            <li><span class="type">Exercise</span>Brand Inspiration Board [cont.]</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
                         </ul>
                     </div>
                 </div>
