--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,52 +8,54 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 26th</h1>
-            <h3>Week 27 Day 5 (Career Development Week)</h3>
+            <h1>GDWD 105 - Agenda for October 14th</h1>
+            <h3>Week 19 Day 1 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            How do you feel about coding and web design
-                            now that the class is over?
+                            How do you feel about the idea of coding?
                         </li>
                     </ul>
-                    <div class="img-container more-space final-black">
+                    <div class="img-container ">
                         <img 
-                            src="images/finalday.jpg"
-                            alt="final day"
+                            src="images/anxious.webp"
+                            alt="things that make me anxious"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
-                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>My First Blog Post</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <h2>Schedule</h2>
                     <div class="wrapper">
-                        <h3>Announcements (9am-9:10am)</h3>
+                        <h3>Introductions (9am-9:10am)</h3>
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
+                            <li><span class="type">Resources</span>Course Overview and Policies</li>
+                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                            <li><span class="type">Demo</span>Intro to WordPress</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                            <li><span class="type">Demo</span>Intro to WordPress (cont.)</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                 </div>
