--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,61 +1,58 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (Breadsticks & Jellybeans Combo)</title>
+        <title>GDWD 105 AGENDA (6022 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 14th</h1>
-            <h3>Week 19 Day 1 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for October 15th</h1>
+            <h3>Week 19 Day 2 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            How do you feel about the idea of coding?
+                            Are you an early bird, or a night owl?
                         </li>
                     </ul>
-                    <div class="img-container ">
+                    <div class="img-container more-space light-gray">
                         <img 
-                            src="images/anxious.webp"
-                            alt="things that make me anxious"
+                            src="images/night-owl.webp"
+                            alt="night owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
                         <li><span class="type">Exercise</span>My First Blog Post</li>
+                        <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
-                    <h2>Schedule</h2>
                     <div class="wrapper">
-                        <h3>Introductions (9am-9:10am)</h3>
+                        <h3>Announcements (9am-9:10am)</h3>
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Resources</span>Course Overview and Policies</li>
-                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
-                            <li><span class="type">Demo</span>Intro to WordPress</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Demo</span>Customizing WordPress</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Intro to WordPress (cont.)</li>
-                            <li><span class="type">Exercise</span>My First Blog Post</li>
+                            <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
                         </ul>
                     </div>
                 </div>
