--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 16th</h1>
-            <h3>Week 19 Day 3 (Intro to CMS)</h3>
+            <h1>GDWD 105 - Agenda for October 17th</h1>
+            <h3>Week 19 Day 4 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Coffee? Tea? Or other?
+                            How do you feel about WordPress so far?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-green">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/tea-rex.jpg"
-                            alt="tea-rex"
+                            src="images/overthinking.webp"
+                            alt="overthinking"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
-                        <li><span class="type">Exercise</span>Recipe Post</li>
+                        <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
+                        <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
+                        <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
                     </ul>
                 </div>
 
@@ -37,23 +38,23 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
-                            <li><span class="type">Demo</span>Columns and Layouts, Anchors and Links</li>
+                            <li><span class="type">Demo</span>Homepage Settings</li>
+                            <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Columns and Layouts, Anchors and Links [cont.]</li>
-                            <li><span class="type">Exercise</span>Recipe Post</li>
+                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Recipe Post [cont.]</li>
+                            <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
